@@ -1,3 +1,2 @@
 debian/tmp/usr/lib/*/libgnutls.so.*
-debian/tmp/usr/lib/*/libgnutls-e*.so.*
 debian/tmp/usr/share/locale/*
