@@ -13,6 +13,7 @@ DEB_CONFIGURE_EXTRA_FLAGS = --enable-ld-version-script --enable-cxx \
 	--libdir=\$${prefix}/lib/$(DEB_HOST_MULTIARCH)
 DEB_MAKE_CHECK_TARGET = check
 DEB_DH_MAKESHLIBS_ARGS_libgnutls28 := -V 'libgnutls28 (>= 3.0.0-0)'
+DEB_DH_MAKESHLIBS_ARGS_libgnutls-extra28 := -V 'libgnutls-extra28 (>= 3.0.0-0)'
 DEB_DH_MAKESHLIBS_ARGS_guile-gnutls := -V 'guile-gnutls (>= 3.0.0-0)'
 DEB_COMPRESS_EXCLUDE := gnutls.pdf
 
@@ -49,6 +50,16 @@ binary-install/gnutls-doc::
 	done && \
 	cd ../.. && \
 	dh_link -pgnutls-doc
+
+binary-install/libgnutls-extra28::
+	rm -vrf debian/libgnutls-extra28/usr/share/doc/libgnutls-extra28
+	dh_link -plibgnutls-extra28 usr/share/doc/libgnutls28 \
+		usr/share/doc/libgnutls-extra28
+
+binary-install/libgnutlsxx28::
+	rm -vrf debian/libgnutlsxx28/usr/share/doc/libgnutlsxx28
+	dh_link -plibgnutlsxx28 usr/share/doc/libgnutls28 \
+		usr/share/doc/libgnutlsxx28
 
 common-install-arch::
 	find debian/*/usr/lib/* -name '*.so.*.*' -type f -exec \
